--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -11,7 +11,7 @@
     <meta name="keywords" content="{{keywords}}" />
 
     <link rel="stylesheet" href="dist/base.min.css">
-    <link rel="stylesheet" href="http://atnartur.ru/libs/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://atnartur.ru/libs/font-awesome/css/font-awesome.min.css">
 
     <!-- Schema.org markup (Google) -->
     <meta itemprop="name" content="{{name}}">
@@ -315,10 +315,9 @@
 {{/each}}
 
 
-<script src="http://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
-<script src="http://yastatic.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://yastatic.net/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://yastatic.net/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="dist/js/main.js"></script>
-{{!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:100,300,700&subset=latin,cyrillic-ext"> --}}
 
 <!-- Yandex.Metrika counter --> <script type="text/javascript"> (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter20805298 = new Ya.Metrika({ id:20805298, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/20805298" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
