+ новые технологии = npm update

--- a/templates/index.handlebars
+++ b/templates/index.handlebars
@@ -140,17 +140,17 @@
                 <h2>Frontend</h2>
                 <p>
                     <b>Языки:</b> HTML 5, CSS 3, JavaScript (ES6)<br>
-                    <b>Библиотеки:</b> React, Matreshka, ThreeJS<br>
-                    <b>Сборка:</b> webpack, gulp, grunt
+                    <b>Библиотеки:</b> VueJS, React, ThreeJS<br>
+                    <b>Сборка:</b> webpack, gulp
                 </p>
                 <h2>Backend</h2>
                 <p>
                     <b>Технологии:</b>
+                        <b>Python</b> (Django, Flask, Celery),
                         <b>PHP</b> (Phalcon, Laravel),
-                        <b>Python</b> (Django),
                         <b>NodeJS</b> (electron, socket.io),
                         <b>C#, Java</b> <br>
-                    <b>Базы данных:</b> PosgreSQL, MySQL, SQLite, Redis
+                    <b>Базы данных:</b> PosgreSQL, MySQL, Redis, RabbitMQ
                 </p>
                 <h2>Инструменты</h2>
                 <p>Git, Intellij IDEA, Docker, Sentry, Gitlab CI</p>
@@ -219,7 +219,9 @@
         <p>
             &copy; 2011-{{year}} <a href="/" class="logo">Артур Атнагулов</a>
             <br>
-            <i class="fa fa-code"></i>
+            <a href="https://github.com/atnartur/i.atnartur.ru" target="_blank">
+                <i class="fa fa-code"></i>
+            </a>
         </p>
     </div>
 </footer>
